<resources>
    <string name="app_name">C4U</string>
    <string name="action_settings">Settings</string>
    <string name="Trend">Trend</string>
    <string name="Mine">Mine</string>
    <string name="Control">Control</string>
    <string name="login">Login</string>
    <string name="login_user_et">Account number</string>
    <string name="login_password_et">Password</string>
    <string name="register">Register</string>
    <string name="welcome1">Don’t miss doing any good thing no</string>
    <string name="welcome2">matter how insignificant it looks</string>
    <string name="welcome">Welcome</string>
    <string name="username">User name</string>
    <string name="account_number">Account number</string>
    <string name="emailbox">Mailbox</string>
    <string name="integral">Integral</string>
    <string name="exit">Exit account</string>
    <string name="non_response">Non response</string>
    <string name="video_call">Video call</string>
    <string name="remote_control">Remote control</string>
    <string name="Confirm">Confirm the password</string>
    <string name="mailbox">Mailbox</string>
    <string name="Account_empty">Account can not be empty</string>
    <string name="password_empty">The password must not be empty</string>
    <string name="Please_enter_user">Please enter 6-11 digit account name</string>
    <string name="Please_enter_password">Please enter the 6-11 bit password</string>
    <string name="password_different">The password is different from the confirmation password.</string>
    <string name="mailbox_format">Incorrect mailbox format</string>
    <string name="http_data_error">Data is abnormal. Please retry or contact customer service</string>
    <string name="http_parameters_error">Abnormal parameters, please retry or contact customer service</string>
    <string name="Account_name_exists">Account name already exists</string>
    <string name="register_Success">register Success</string>
    <string name="visually_impaired">Visually impaired</string>
    <string name="evaluation">Evaluation to integral</string>
    <string name="use_methods_and_rules">Use methods and rules</string>
    <string name="dialog_msg">You have a new request for help</string>
    <string name="Phone_number">Phone number</string>
    <string name="Phone_number_error">Please enter the correct cell phone number.</string>
    <string name="setting_t1">5min</string>
    <string name="setting_t2">3min</string>
    <string name="setting_t3">1min</string>
    <string name="setting_t4">4min</string>
    <string name="setting_t5">5min</string>
    <string name="setting_t6">6min</string>
</resources>
